# C-PrimerExerc

./: .gitignore  README.md
C01/: 1_2.cpp
CPPNewFeatures/: CMakeLists.txt
vscodeCMakeTmplate/Project/: CMakeLists.txt
vscodeCMakeTmplate/Project/10DayPractice/: 10DayPractice.cpp  CMakeLists.txt
vscodeCMakeTmplate/Project/CircularQueue/: CMakeLists.txt  CircularQueue.cpp  MyQueue.cpp  MyQueue.h
vscodeCMakeTmplate/Project/CircularQueueTemplate/: CMakeLists.txt  CircularQueue.cpp  CircularQueueTemplate.cpp  MyQueue.h
vscodeCMakeTmplate/Project/PerfectForwarding/: CMakeLists.txt  PerfectForwarding.cpp
vscodeCMakeTmplate/Project/Pushback_Emplaceback/: CMakeLists.txt  Pushback_Emplaceback.cpp
vscodeCMakeTmplate/Project/QuickVertification/: CMakeLists.txt  QuickVertification.cpp
vscodeCMakeTmplate/Project/SharedPtr/: CMakeLists.txt  SharedPtr.cpp
vscodeCMakeTmplate/Project/Template/: CMakeLists.txt  Template.cpp
vscodeCMakeTmplate/Project/UniversalReferences/: CMakeLists.txt  main.cpp
vscodeCMakeTmplate/Project/abstract/: CMakeLists.txt  abstract.cpp
vscodeCMakeTmplate/Project/const/: CMakeLists.txt  file1.cpp  main.cpp
vscodeCMakeTmplate/Project/emplaceback/: CMakeLists.txt  emplaceback.cpp
vscodeCMakeTmplate/Project/fileStream/: CMakeLists.txt  fileStream.cpp
vscodeCMakeTmplate/Project/sizeof/: CMakeLists.txt  sizeof.cpp
vscodeCMakeTmplate/Project/static/: CMakeLists.txt  demo.cpp
vscodeCMakeTmplate/Project/this/: CMakeLists.txt  this.cpp
vscodeCMakeTmplate/Project/vptr_vtable/: CMakeLists.txt  vptr_vtable.cpp
(+16 files in other folders)
