add_subdirectory( const )
add_subdirectory( static )
add_subdirectory( UniversalReferences )
add_subdirectory( PerfectForwarding )
add_subdirectory( emplaceback )
add_subdirectory( this )
add_subdirectory(sizeof)
add_subdirectory(CircularQueue)
add_subdirectory(CircularQueueTemplate)
add_subdirectory(abstract)
add_subdirectory(vptr_vtable)
add_subdirectory(Pushback_Emplaceback)
add_subdirectory(QuickVertification)
add_subdirectory(SharedPtr)
add_subdirectory(10DayPractice)
add_subdirectory(Template)